search application telemetry via xpack.usage